--- a/firmware_espidf/platformio.ini
+++ b/firmware_espidf/platformio.ini
@@ -13,10 +13,9 @@ platform = espressif32@6.9.0
 board = esp32doit-devkit-v1
 framework = espidf
 monitor_speed = 115200
-monitor_raw = 1
+; monitor_raw = 1
 monitor_filters = esp32_exception_decoder
 board_build.filesystem = littlefs
 board_build.partitions = partitions.csv
-lib_deps = 
-  https://github.com/joltwallet/esp_littlefs.git@1.14.8
+lib_deps = https://github.com/joltwallet/esp_littlefs.git@1.14.8
   
